
=head1 REVISION HISTORY FOR Set::Object

=head1 1.14

=over

=item *

Fix build problem on Win32 (thanks Steffen Goeldner)

=back

=head1 1.13

=over

=item *

Fix F<Makefile.PL> so this F<Changes.pod> is not delivered as
C<Set::Changes> :-}

=item *

Restore compatibility with 5.6.0

=item *

Remove some compile-time warnings, please let me know if this version
does not build on any platform!

=back

=head1 1.12, 30 Aug 2005

=over

=item *

added patch from Sergey Skvortsov for backwards compatibility with
Perl versions before 5.8 (include >100k F<ppport.h>!)

=item *

removed 'C<set()>' constructor from default export list, as its name
conflicts with too many other modules.

=back

=head1 1.11, 27 Apr 2005

=over

=item *

removed debugging C<&_> func (was causing strange errors on 5.9.1)

=cut

=back

=head1 1.10, 2 Apr 2005


=over

=item *

added 'C<set()>' constructor and use-as-array-ref interface

=back

=head1 1.09, 26 Mar 2005

=over

=item *

added 'bool' overload operator to C<Set::Object>.  For backwards
compatibility, always returns true.

=back

=head2 1.08_02, 14 Jan 2005

=over

=item *

Cutting out the "Universe" representation; this module gives plain
sets only.

=item *

documentation fixes

=back

=head2 1.08_01, 12 Jan 2005

=over

=item *

First attempt at adding support for scalars.  This version tries to
work as closely to C<Set::Scalar> as possible.

This approach will not be continued unless there are a lot of requests
for it to be implemented.  I think it's overly complicated, and not
what people expect when they want a Set.

=back

=head1 1.08, 14 Oct 2004

=over

=item *

another segfault bites the dust; this time, avoids a segfault when
taking a difference between sets of exactly 31 and 0 size.  Same root
fault as the previous bug, this time I have a test case for it, too.

=back

=head1 1.07, 16 Aug 2004

=over

=item *

yet another segfault fix, this time due to incorrect use of PUSHs vs