@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Set-Object
-version:      1.14
+version:      1.15
 version_from: lib/Set/Object.pm
 installdirs:  site
 requires:
